refactor(04-network): 第四卷全卷重写——从 API 罗列改为生产故障驱动
## 核心变更思路

旧稿以「概念定义 → API 罗列 → RFC 式分项」为主线，读者反映枯燥、干涩、
难懂。新稿统一采用「生产故障场景 → 往回拆解原理」的叙事策略——每个章节从
一个开发者在线上会真实碰到的告警/故障起手，再往回解释底层机制为什么这样
设计、不这样会怎样。

## 各章变更

### §1 网络基础（微调）
- 章首 blockquote 改为问题驱动

### §2 TCP/IP（微调）
- 章首 blockquote 改为问题驱动
- 细化了粘包拆包三种方案的说明（为 §5 铺垫）

### §3 Socket（结构性重写，-49/+37 行）
- 重写为 OS 内核视角（fd + 协议栈 + 五元组）
- 新增：Socket 系统调用 C/Java 逐条对照
- 新增：内核数据结构（发送/接收缓冲区、全连接/半连接队列、阻塞本质）
- 新增：6 个生产级 Socket 选项及 Java 三层 API 对照
- 新增：Echo 示例 + BIO 局限分析（10000 连接 = 10GB 栈内存）

### §4 NIO（结构性重写，-277/+281 行）
- 从 「概念定义」改为 「BIO 困境 → Selector → Reactor」叙事
- 核心卖点：一个线程管理万千连接的原理
- 新增 NIO 真实限制章节（epoll 空轮询 Bug、平台差异），为 §5 铺路

### §5 Netty（结构性重写，-277/+268 行）
- 旧稿：7 节 API 目录式罗列（Bootstrap/Pipeline/ByteBuf/编解码/线程模型）
- 新稿：5 节从「Dubbo 线程池打满」往回拆
- 新增：Dubbo dispatcher vs threadpool 两层线程模型辨析
- 新增：Direct buffer memory OOM 场景（-XX:MaxDirectMemorySize 陷阱）
- 删除了 ChannelPipeline 独立成节（并入 Reactor 全景）

### §6 HTTP（结构性重写，-266/+275 行）
- 旧稿：7 节 RFC 式分项（为什么出现/报文/方法/状态码/HTTP1.1/2/3）
- 新稿：5 节从「502/504/Connection Timeout 傻傻分不清」往回拆
- 新增：curl -w 分阶段计时（6 个量化指标定位瓶颈）
- 新增：502 vs 504 根因差异对照表 + Nginx error.log 一行诊断
- 新增：GET 安全/幂等陷阱（爬虫扫 GET 触发写操作）
- 新增：状态码排查命令手册（netstat / jstack / grep 对应）
- 版本演进压缩为 1 节（HTTP/1.1 → HTTP/2 → HTTP/3 对比）

### §7 Servlet/Spring MVC（结构性重写，-453/+445 行）
- 从 「组件职责罗列」改为 「请求的完整旅程」
- 核心卖点：一个 @GetMapping 背后发生了什么
- 新增：Tomcat NioEndpoint 接收字节全过程
- 新增：Filter/Interceptor/ControllerAdvice 三层拦截权责辨析
- 新增：Servlet 3.0+ 异步请求（AsyncContext）的场景与陷阱
- 新增：DispatcherServlet 九大组件逐个展开

### §8 RPC（结构性重写，-310/+299 行）
- 旧稿：5 节组件目录式罗列（为什么需要/核心组成/序列化/服务发现/选型）
- 新稿：5 节从「Dubbo Profiler 拆解 + GC 静默超时」往回拆
- 新增：Dubbo Profiler 6 环节耗时拆解
- 新增：GC 导致静默超时排查方法（GC 日志 ↔ RPC 超时时间点对账）
- 新增：RPC 超时排查三板斧
- 新增：Protobuf 默认值陷阱（int32 默认值 0 不序列化 → autoboxing NPE）
- 新增：注册中心挂了不影响缓存实例的调用

### §9 长连接（微调）
- 章首 blockquote 改为问题驱动

### index.md（新增 37 行）
- 重写卷首页导航，加入阅读建议和按场景速查入口

### outline/java-network-outline.md（-130/+148 行）
- 同步 §3/§4/§5/§6/§7/§8 实际章节结构到 outline
- 旧 outline 已过时（§5 还写着 7 节 Bootstrap → Pipeli